# royal-equips-orchestrator

./: .branch-protection.json  .codacy.yml  .credentials  .credentials_rsaparams  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitconfig  .gitignore  .gitleaks.toml  .npmrc  .pnpmrc  .pre-commit-config.yaml  .pre-commit-hook.sh  .prettierrc.json  .runner  =3.8.0  AGENT.md  AGENT_INSTRUCTIONS.md  AGENT_ORCHESTRATION_SYSTEM.md  ALL_TYPESCRIPT_ERRORS_FIXED.md  ANALYTICS_AGENT_COMPLETE.md  AUTONOMOUS_EMPIRE_INTEGRATION.md  AUTONOMOUS_PROGRESS_REPORT.md  BEFORE_AFTER_COMPARISON.md  BEFORE_AFTER_DEPLOYMENT_FIX.md  BEFORE_AFTER_FIX.md  BEFORE_AFTER_INVENTORY.md  BUSINESS_LOGIC_COMPLETION.md  CHANGELOG.md  CLOUDFLARE_DASHBOARD_CONFIG.md  CLOUDFLARE_DEPLOYMENT_FIXED.md  CLOUDFLARE_FIX.md  CLOUDFLARE_FIX_README.md  CLOUDFLARE_PAGES_FIX.md  CODEBASE_MOCK_REMOVAL_COMPLETE.md  CODEOWNERS  COMMAND_CENTER_ASSETS_FIX.md  (+130 more)
.github/: CODEOWNERS  COPILOT.md  COPILOT_INSTRUCTIONS_CHANGELOG.md  Empire-Automation-Roadmap.md  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  copilot-instructions.md  copilot-policy.yml  dependabot.yml  pr-trigger.txt  required-checks.md
.github/ISSUE_TEMPLATE/: bug_report.md  copilot_task.yml  feature_request.md  improvement.md
.github/copilot/: agent.yml
.github/scripts/: upgrade_brains.sh
.github/workflows/: _reusable-base.yml  agent-auto-pr.yml  agent-autopR.yml  agents-execution.yml  ai-command-center.yml  auto-pr.yml  autonomous-healing.yml  build-test.yml  ci-complete.yml  ci.yml  cloudflare-deploy.yml  codacy.yml  (+42 more)
.github/workflows-backup/: _reusable-base.yml  agents-execution.yml  ci-complete.yml  ci.yml  codacy.yml  codeql.yml  commitlint.yml  comprehensive-ci.yml  conventional-commits.yml  cross-platform-validation.yml  dependency-hygiene.yml  deploy-on-push.yml  docker-build.yml  e2e.yml  empire-audit.yml  empire-auto-pr.yml  empire-autonomous-analysis.yml  empire-docs-upgrade.yml  empire-orchestrate-pr.yml  empire-orchestrator.yml  empire-security.yml  enforce-main-health.yml  guardrails.yml  monitoring.yml  orchestrator.yml  osv-scanner.yml  python-ci.yml  readyz-check.yml  repo-ci.yml  security.yml  self-heal.yml  self-healing-system.yml  selfhosted-smoke.yml  single-origin-smoke.yml  trivy.yml  unified-origin-smoke.yml
.husky/: pre-commit  pre-push
.zap/: rules.tsv
actions-runner/: .credentials  .credentials_rsaparams  .runner  .service
admin/: Dockerfile  package-lock.json  package.json  vite.config.ts
agents/: marketing_campaign.mjs  order_processing.mjs  product_research.mjs
alembic_migrations/: env.py
api/: config.py  main.py
app/: __init__.py  config.py  orchestrator_bridge.py  sockets.py
apps/: web
cloudflare-proxy/: README.md  webhook-worker.js  worker.js  wrangler-webhooks.toml  wrangler.toml
core/: health_service.py  production_validator.py  resilience.py  structured_logging.py
docs/: AGENT_EXECUTION_API.md  ARCH_LAYOUT.md  AUTO_FIX_SYSTEM.md  COMMAND_CENTER_ACCESS.md  COPILOT_BRIEFING.md  CROSS_PLATFORM_WORKFLOWS.md  HEALTH_ENDPOINTS.md  HEALTH_ENDPOINTS_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  MULTI_AGENT_SECURITY_ORCHESTRATOR.md  PRODUCTION_DEPLOYMENT.md  ROYALGPT_ORCHESTRATION.md  RUNBOOK.md  RUNTIME_LOGS_FIX.md  SECRET_MANAGEMENT.md  SECRET_SYSTEM.md  SECURITY_IMPROVEMENTS.md  SINGLE_ORIGIN_DEPLOYMENT.md  STARTUP_SYSTEM.md  STRATEGIC_ARCHITECTURE_PLAN.md  WEBHOOK_SETUP_GUIDE.md  architecture.md  cleanup.md  copilot_prompt.md  empire_blueprint.md  migration-fastapi-to-flask.md  runbook.md  security.md  workplan.md
edge-functions/: README.md
empire_intelligence/: product_research_20250917_195754.json  product_research_20250917_202923.json  product_research_20250918_132647.json  supplier_research_20250918_165308.json  supplier_research_20250918_195104.json
examples/: README.md  agent_execution_demo.py
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yaml
logs/: devops_audit.jsonl
nginx/: nginx.conf
orchestrator/: __init__.py  api.py
reports/: STACK_REPORT.md  sbom.json
royal_mcp/: __init__.py  server.py
royal_platform/: __init__.py
scripts/: auto_improvement.py  autonomous_devops_commander.py  ci_validate.py  comprehensive_health_check.py  demo_devops_agent.py  deploy-edge-functions.sh  deploy-webhooks.ps1  diagnose_stack.sh  empire_autonomous_analyzer.py  ensure-runtime-logs.sh  execute_agent.py  fix-agent.mjs  fix-agent.ps1  fix-package.js  git-aliases.sh  health_check.py  import_smoke_test.py  launch_api.py  logging_filters.py  retry_logic.py  run_analytics.py  run_control_center.py  run_holo_control_center.py  run_orchestrator.py  run_security_checks.py  runtime_logger.py  security_audit.py  smoke_test.sh  start_control_center.sh  start_devops_empire.py  start_empire.py  tech_stack_analyzer.py  test_integration.py  validate-security-workflow.sh  verify-cloudflare-build.sh
shopify_data/: analysis_summary_20250917_164452.json  analysis_summary_20250917_175057.json  analysis_summary_20250917_175457.json  analysis_summary_20250917_180041.json  analysis_summary_20250917_180303.json  analysis_summary_20250917_180916.json  products_20250917_180303.json
src/: index.js
static/: config.json  index.html  styles.css
templates/: aria_command_center.html  index.html
tests/: __init__.py  setup.ts  smoke.test.ts  test_agents.py  test_auto_fix.py  test_autonomous_devops.py  test_command_center.py  test_control_api.py  test_control_center_routing.py  test_control_endpoints.py  test_empire_system.py  test_enhanced_pricing.py  test_fase_implementation.py  test_flask_app.py  test_flask_command_center.py  test_flask_critical.py  test_flask_health_endpoints.py  test_health.py  test_health_and_routes.py  test_import_app.py  test_imports.py  test_logging_filter.py  test_ml_enhanced_pricing.py  test_new_endpoints.py  test_shopify_blueprint.py  test_shopify_connector.py  test_shopify_integration.py  test_start_control_center_script.py  test_streamlit_imports.py  test_system_integration.py  test_websocket.py
workers/: api-proxy.ts  wrangler.toml
(+638 files in other folders)
